1999-10-23  Kenichi OKADA <okada@opaopa.org>

	* hex-util.el: New file.
	* hmac-util.el: Remove.
	* hmac-md5.el: Update.
	* FLIM-ELS (flim-modeules): Rename `hex-util' from `hmac-util'.

1999-10-22  Kenichi OKADA <okada@opaopa.org>

	* smtp.el (smtp-via-smtp): Fix to use `smtp-authentication-type',
	`smtp-authentication-user', `smtp-authentication-passphrase' and
	`smtp-connection-type'.

1999-10-22  Daiki Ueno <ueno@ueda.info.waseda.ac.jp>

	* smtp.el (smtp-authentication-type): New variable.
	(smtp-authentication-user): New variable.
	(smtp-authentication-passphrase): New variable.
	(smtp-connection-type): New variable.


1999-10-21  Kenichi OKADA <okada@opaopa.org>

	* SLIM: Version 1.13.1 released.

1999-10-21  Kenichi OKADA <okada@opaopa.org>

	* SLIM-TIPS: Add comment.

1999-10-21  Kenichi OKADA <okada@opaopa.org>

	* smtp.el (smtp-via-smtp): Add autoload for
	`starttls-open-stream', `starttls-negotiate',
	`sasl-cram-md5' and `sasl-plain'.
	* smtp.el (smtp-via-smtp): Don't require `sasl' and `starttls'.

1999-10-21  Kenichi OKADA <okada@opaopa.org>

	* starttls.c: New file.
	* smtp.el (smtp-via-smtp): STARTTLS support.
	* SLIM-TIPS: New file.
	* starttls.c: Deleted. See SLIM-TIPS.
	* FLIM-ELS (flim-modules): Add `starttls'

1999-10-21  Daiki Ueno <ueno@ueda.info.waseda.ac.jp>

	* starttls.el: New file.
	* starttls.c: New file.

1999-10-20  Kenichi OKADA <okada@opaopa.org>

	* smtp.el (smtp-via-smtp): Update to delete
	insecure sequences at plain.
	* SLIM-VERION: Add code name.
	* mime-def.el (mime-library-product): Up.

1999-10-20  Shuhei KOBAYASHI <shuhei@aqua.ocn.ne.jp>

	* hmac-def.el (define-hmac-function): Update to delete
	insecure sequences.


1999-10-20  Kenichi OKADA <okada@opaopa.org>

	* SLIM: Version 1.13.0 released.

1999-10-20  Kenichi OKADA <okada@opaopa.org>

	* smtp.el (smtp-via-smtp): Fix typo.
	* hmac-md5.el: Add Author and Maintainer.

1999-10-20  Kenichi OKADA <okada@opaopa.org>

	* hmac-md5.el (hmac-md5): Specify the 4th arg to `md5'